making the code cleaner, aligning radio buttons and check boxes, fixing a tristate filter issue, and rendering elements with missing parent at root level.

--- a/multiselect/src/main/java/com/koodaripalvelut/common/wicket/behavior/jquery.tristate.css
+++ b/multiselect/src/main/java/com/koodaripalvelut/common/wicket/behavior/jquery.tristate.css
@@ -19,9 +19,13 @@ ul.triState li {
 	clear: both;
 	line-height: 1.3;
 	list-style: none;
-	padding: 0; 
+	padding-left: 18px; 
+/* 	padding: 0;  */
 }
 
+ul.triState .normal-li {
+	padding-left: 21px; 
+}
 ul.triState a.checkbox {
 	background: url(3-state-checkbox.gif) 0 0 no-repeat;
 	display: block;
@@ -38,7 +42,7 @@ ul.triState .radiobutton { margin-top: .7em; margin-left: 0; }
 ul.triState .tristate-node-element {float: left;}
 ul.triState a.checked { background-position: 0 -13px; }
 ul.triState a.partial { background-position: 0 -26px; }
-ul.triState li li { padding: 0 0 0 21px; }
+/* ul.triState li li { padding: 0 0 0 17px; } */
   
 ul.triState a {border: thick;}
 ul.triState li{ background: url(noexpanded.png) 7px center no-repeat; }
